kubernetes/main/apps/monitoring/uptime-kuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  annotations:
    cert-manager.io/cluster-issuer: zerossl-prod
    external-dns.alpha.kubernetes.io/target: 9a0ffdc6-2725-4fbc-bf4b-e137a7081be3.cfargotunnel.com
spec:
  ingressClassName: cilium
  rules:
    - host: uptime.nidr0x.win
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma
                port:
                  name: http
  tls:
    - hosts:
        - uptime.nidr0x.win
